ie6: Fix date line wrapping in messages
IE6 requires that we also apply a "white-space: nowrap" to the span
that holds the date.  It apparently doesn't inherit this from its
container td element.

Bug: GERRIT-89

--- a/src/main/java/com/google/gerrit/client/GerritCss.css
+++ b/src/main/java/com/google/gerrit/client/GerritCss.css
@@ -352,6 +352,9 @@
   white-space: nowrap;
   width: 5em;
 }
+.gerrit-PatchContentTable .Comment .complexHeader span {
+  white-space: nowrap;
+}
 .gerrit-PatchContentTable .Comment .content {
   border-top: 3px solid #e3e3e3;
 }
@@ -434,6 +437,9 @@
 }
 
 .gerrit-ChangeScreen .gwt-DisclosurePanel .complexHeader {
+  white-space: nowrap;
+}
+.gerrit-ChangeScreen .gwt-DisclosurePanel .complexHeader span {
   white-space: nowrap;
 }
 
